# CloxInterpreter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cmakelists.txt  README.md
include/: chunk.h  common.h  compiler.h  debug.h  locals.h  native_functions.h  objects.h  parser.h  string_pool.h  tokens.h  value.h  vm.h
programs/: arithmetic.lox  comments_test.lox  comparisons.lox  control_flow.lox  fibonacci.lox  functions.lox  scoping.lox  strings.lox  variables.lox
src/: compiler.cpp  debug.cpp  main.cpp  native_functions.cpp  vm.cpp
